[gd_scene load_steps=9 format=2]

[ext_resource path="res://turret/textures/tripod.PNG" type="Texture" id=1]
[ext_resource path="res://turret/textures/head.PNG" type="Texture" id=2]
[ext_resource path="res://turret/textures/barrel.PNG" type="Texture" id=3]
[ext_resource path="res://turret/Turret.gd" type="Script" id=4]
[ext_resource path="res://turret/textures/flash.png" type="Texture" id=5]
[ext_resource path="res://data/audio/shot.ogg" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 192.0

[sub_resource type="CircleShape2D" id=2]
radius = 1600.0

[node name="Turret" type="Area2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 32
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -28, 8 )

[node name="Head" type="Sprite" parent="Base"]
texture = ExtResource( 2 )
offset = Vector2( 8, 0 )

[node name="Barrel" type="Sprite" parent="Base/Head"]
show_behind_parent = true
position = Vector2( 144, 0 )
texture = ExtResource( 3 )

[node name="Cannon" type="Position2D" parent="Base/Head/Barrel"]
position = Vector2( 37, 0 )

[node name="Flash" type="Sprite" parent="Base/Head/Barrel/Cannon"]
visible = false
position = Vector2( 139, -16 )
texture = ExtResource( 5 )
hframes = 3

[node name="Line2D" type="Line2D" parent="Base/Head/Barrel/Cannon"]
z_index = -2
z_as_relative = false
default_color = Color( 0.556863, 0.231373, 0.27451, 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlantDetector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="PlantDetector"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 7
collide_with_areas = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="PlantDetector" to="." method="_on_PlantDetector_area_entered"]
[connection signal="area_exited" from="PlantDetector" to="." method="_on_PlantDetector_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
